# nf-loe

./: pyproject.toml  requirements.txt
experiments/: main.py
nf_loe/: distributions.py  nelson.py
nf_loe/data/: __init__.py  generic.py  msl.py  psm.py  smap.py  traj.py  utils.py
nf_loe/models/: __init__.py  flows.py  nfad.py
nf_loe/nf_old/: flows.py  trainer.py
notebooks/: 01-example.ipynb  01-ffirst-run.ipynb  experiment.py  mnist-example.ipynb
tests/: test_nf_loe.py
