[tool.poetry]
name = "nf-loe"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
poethepoet = "^0.16.0"
matplotlib = "^3.5.3"
jupyterlab = "^3.4.5"
scikit-learn = "^1.1.2"
tdqm = "^0.0.1"
ipywidgets = "^8.0.1"
jupyterlab-widgets = "^3.0.2"
pyod = "^1.0.4"
typer = {version = "^0.6.1", extras = ["all"]}
nflows = {git = "https://github.com/bayesiains/nflows.git"}
pydantic = "^1.10.2"
mlflow = "^1.29.0"
torchmetrics = "^0.10.0"
wandb = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poe.tasks]
install-ltt = "python -m pip install light-the-torch"
run-ltt = "python -m light_the_torch install --upgrade torch torchaudio torchvision"
autoinstall-torch-cuda = ["install-ltt", "run-ltt"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
